--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
 	background-color: black;
 	color: white;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+    min-height: 100vh;
 }
 
 a {
 	color: white;
 	text-decoration: none;
-	margin-top: 50px;
 }
