--- a/style.css
+++ b/style.css
@@ -9,40 +9,58 @@
 }
 
 body {
-	background-color: black;
-	color: white;
+	background-color: #6F6FAB;
+	color: #232336;
 	align-items: center;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	margin: 0;
 	min-height: 100vh;
+	font-family: 'Righteous', cursive;
 }
 
 a {
-	color: white;
+	color: #232336;
 	text-decoration: none;
 	margin-top: 50px;
+	font-size: 20px;
 }
 
 button {
 	font-size: 20px;
-	width: 50px;
+	width: 65px;
+	height: 35px;
+	border-radius: 7px;
+	background-color: var(--pastel-gray);
+	color: black;
+	margin: 2px 2px 2px 2px;
+	border: 0px solid #5c5f5f;
+	border-bottom: 5px solid #5c5f5f;
+	font-family: 'Righteous', cursive;
 }
 
 #number-box {
-	margin-top: 40px;
-	height: 30px;
-	width: 205px;
+	margin-top: 25px;
+	height: 50px;
+	width: 283px;
+	font-size: 25px;
+	font-family: 'Righteous', cursive;
+	background-color: var(--pastel-yellow);
+	border-radius: 7px;
+	border: 0px solid var(--pastel-yellow);
+	border-bottom: 4px solid rgb(148, 148, 96);
 }
 
 .calculator-container {
 	border: 1px solid white;
-	width: 300px;
-	height: 300px;
+	width: 320px;
+	height: 350px;
 	display: flex;
 	justify-content: center;
-	background-color:darkseagreen;
+	background-color:#df78a3;
+	border-radius: 20px;
+	border: 4px solid var(--pastel-pink);
 }
 
 .all-buttons {
@@ -57,5 +75,14 @@ button {
 }
 
 #equals-btn {
-	width: 103.5px;
+	width: 140px;
+	background-color: var(--pastel-yellow);
+	border: 0px solid var(--pastel-yellow);
+	border-bottom: 4px solid rgb(148, 148, 96);
+}
+
+#clear-btn {
+	background-color: var(--pastel-yellow);
+	border: 0px solid var(--pastel-yellow);
+	border-bottom: 4px solid rgb(148, 148, 96);
 }
