aligned text box text to the right
-added button color clear when equals is pressed

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ button {
 	border-radius: 7px;
 	border: 0px solid var(--pastel-yellow);
 	border-bottom: 4px solid rgb(148, 148, 96);
+	text-align: right;
 }
 
 .calculator-container {
