--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	margin: 0;
+	padding: 0;
 	min-height: 100vh;
 	font-family: "Righteous", cursive;
 }
