--- a/style.css
+++ b/style.css
@@ -103,9 +103,9 @@ button:hover {
 	border-bottom: 4px solid #6f6fab;
 }
 
-/*@media (min-width: 428px) and (max-width: 430px) {
+@media (min-width: 428px) and (max-width: 430px) {
 	.calculator-container {
-		width: 380px;
+		width: 360px;
 		height: 370px;
 	}
 
@@ -113,4 +113,3 @@ button:hover {
 		width: 70px;
 	}
 }
-/*
